crab/src/tier/provider/snapshots/crab__tier__provider__gcs__tests__gcs_basic_nearline_transition.snap
---
source: crab/src/tier/provider/gcs.rs
expression: json
---
{
  "lifecycle": {
    "rule": [
      {
        "action": {
          "type": "SetStorageClass",
          "storageClass": "NEARLINE"
        },
        "condition": {
          "age": 30,
          "matchesPrefix": [
            ".crab/xorbs/"
          ]
        }
      }
    ]
  }
}
