crab/src/tier/provider/snapshots/crab__tier__provider__gcs__tests__gcs_multiple_transitions.snap
---
source: crab/src/tier/provider/gcs.rs
expression: json
---
{
  "lifecycle": {
    "rule": [
      {
        "action": {
          "type": "SetStorageClass",
          "storageClass": "NEARLINE"
        },
        "condition": {
          "age": 30,
          "matchesPrefix": [
            ".crab/xorbs/"
          ]
        }
      },
      {
        "action": {
          "type": "SetStorageClass",
          "storageClass": "ARCHIVE"
        },
        "condition": {
          "age": 365,
          "matchesPrefix": [
            ".crab/xorbs/"
          ]
        }
      }
    ]
  }
}
